<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityRegister">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="217dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/doctor" />

    <EditText
        android:id="@+id/etfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etlname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etmobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/mobile"
        android:inputType="number" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/bregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textColor="#2386D5"
        app:backgroundTint="#ABEBFC" />

    <TextView
        android:id="@+id/tvsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#2196F3"
        android:textSize="16sp" />
</LinearLayout>